	PR target/53961 	* config/i386/i386.md (*lea): New insn pattern. 	(*lea_1): Remove. 	(*lea<mode>_2): Ditto. 	(*lea_{3,4,5,6}_zext): Ditto. 	* config/i386/constraints.md (j): Remove address constraint. 	* config/i386/i386.c (ix86_decompose_address): Allow SImode subreg 	of an address. 	(ix86_print_operand_address): Handle SImode subreg of an address. 	(ix86_avoid_lea_for_add): Reject zero-extended addresses for now.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@189756 138bc75d-0d04-0410-961f-82ee72b054a4